--- a/views/lastTrips.ejs
+++ b/views/lastTrips.ejs
@@ -12,18 +12,8 @@
 </head>
 
 <body>
-    
-
-        <!-- HEADER -->
-        <div class="col-12">
-        <nav class="navbar navbar-light bg-light">
-            <div class="container-fluid d-flex">
-              <a class="navbar-brand p-2 flex-grow-1 bd-highlight" href="#">Ticetac</a>
-              <a class="navbar-brand p-2 bd-highlight" href="#">Connexion</a>
-              <a class="navbar-brand p-2 bd-highlight" href="#">My Last Trips</a>
-            </div>
-          </nav>
-        </div>
+  
+        <%- include('navbar'); %>
 
      
        
