push login avec navbar

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -15,7 +15,7 @@
     
 
         <!-- HEADER -->
-        <div class="col-12">
+        <div class="col-12 .p-0">
         <nav class="navbar navbar-light bg-light">
             <div class="container-fluid d-flex">
               <a class="navbar-brand p-2 flex-grow-1 bd-highlight" href="#">Ticetac</a>
