--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,12 +10,22 @@
     <title>Login</title>
 </head>
 <body>
-    
-    <div class="home">
 
-        <div class="row align-items-center justify-content-center">
+            <!-- HEADER -->
+            <div class="col-12 p-0">
+                <nav class="navbar navbar-light bg-light">
+                    <div class="container-fluid d-flex">
+                      <a class="navbar-brand p-2 flex-grow-1 bd-highlight" href="#">Ticetac</a>
+                      <a class="navbar-brand p-2 bd-highlight" href="#">Connexion</a>
+                      <a class="navbar-brand p-2 bd-highlight" href="#">My Last Trips</a>
+                    </div>
+                  </nav>
+                </div>
 
-
+        
+     
+<div class="container-fluid">             
+ <div class="row align-items-center justify-content-center">
         <!-- SIGN IN AREA -->
         <div class="col-12 col-sm-2 text-center">
 
@@ -53,23 +63,18 @@
                     <input name="" type="text" class="form-control" placeholder="FirstName">
                   </div>
   
-                  <label for="exampleInputEmail1">Email address</label>
-                  <input name="emailFromFront" type="email" class="form-control" aria-describedby="emailHelp" placeholder="Email">
+                  <label >Email address</label>
+                  <input name="" type="email" class="form-control" aria-describedby="emailHelp" placeholder="Email">
         
-                  <label for="exampleInputPassword1">Password</label>
-                  <input name="passwordFromFront" type="password" class="form-control"  placeholder="Password">
-              
-                <button type="submit" class="btn btn-info">Submit</button>
+                  <label>Password</label>
+                  <input name="" type="password" class="form-control"  placeholder="Password">
+                    <button type="submit" class="btn btn-info">Submit</button>
               </form>
             </div>
 
           </div>
-
-  
-
         </div>
-      </div>
 
-
+    </div> 
 </body>
 </html>
