--- a/views/recherche.ejs
+++ b/views/recherche.ejs
@@ -12,10 +12,9 @@
 </head>
 
 <body>
-  
         <%- include('navbar'); %>
 
-     
+     <div class=" container-fluid"></div>
        
         
        
