modifs nav bar et formulaire

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,3 +31,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7db9e8', end
 .logo{
   margin-left: 10px;
 }
+
+/* ---------- Form -------------- */
+
+.titleForm {
+  color: #FFFFFF;
+}
+
+.titleForm {
+  color: #FFFFFF;
+}
