--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,10 +1,14 @@
-<div class="col-12">
+<div class="col-12 p-0">
     <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid d-flex">
-          
-          <a class="navbar-brand p-2 flex-grow-1 bd-highlight" href="#">Ticetac</a>
-          <a class="navbar-brand p-2 bd-highlight" href="#">Connexion</a>
-          <a class="navbar-brand p-2 bd-highlight" href="#">My Last Trips</a>
+        <div class="container-fluid">
+            <div class="left">
+                <img src="images/train.png"/>
+                <a class="navbar-brand p-2 " href="#">Ticetac</a>
+            </div>
+            <div class="right">
+                <a class="navbar-brand" href="#">Connexion</a>
+                <a class="navbar-brand" href="#">My Last Trips</a>
+            </div>
         </div>
     </nav>
 </div>
