--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,9 +18,9 @@
  <div class="row align-items-center justify-content-center p-5">
    
         <!-- SIGN IN AREA -->
-        <div class="col-12 col-sm-2 text-center">
+        <div class="col-12 col-sm-6 col-lg-2 text-center">
               <h4 class="titleForm">Sign In</h4>
-              <form action="/sign-in" method="POST">
+              <form action="/users/sign-in" method="POST">
                   <label>Email address</label>
                   <input name="email" type="email" class="form-control" placeholder="Enter email">
                   <label>Password</label>
@@ -30,7 +30,7 @@
           </div>
 
           <!-- SIGN UP AREA -->
-          <div class="col-12 col-sm-2 text-center">
+          <div class="col-12 col-sm-6 col-lg-2 text-center">
             <h4 class="titleForm">Sign Up</h4>
             <form action="/users/sign-up" method="POST">
               <label>Name</label>
