--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -2,12 +2,12 @@
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <div class="left">
-                <img src="images/train.png"/>
-                <a class="navbar-brand p-2 " href="#">Ticetac</a>
+                <img src="/images/train.png"/>
+                <a class="navbar-brand " href="#">Ticetac</a>
             </div>
             <div class="right">
-                <a class="navbar-brand" href="#">Connexion</a>
-                <a class="navbar-brand" href="#">My Last Trips</a>
+                <a class="navbar-brand" href="users/sign-in">Connexion</a>
+                <a class="navbar-brand" href="/lastTrips">My Last Trips</a>
             </div>
         </div>
     </nav>
