front end de recherche + page erreur et resultat

--- a/views/resultats.ejs
+++ b/views/resultats.ejs
@@ -12,9 +12,26 @@
 </head>
 
 <body>
-  
-        <%- include('navbar'); %>
+<%- include('navbar'); %>
 
+<div class="container-fluid">
+
+    <div class="row align-items-center justify-content-center p-5">
+        <h2 class="text-center"> Tickets availables on "day" : </h2>
+
+        <ul class="list-group justify-content-center align-items-center">
+              
+              <li class="col-8 list-group-item d-flex justify-content-between align-items-center p-3"> 
+                 <p> Paris/Lille</p>
+                 <p> train departure at </p>
+                 <div> 
+                     92€
+                     <button class="btn btn-danger"> Ok </button>
+                 </div>
+              </li>
+    </div>
+
+</div>
      
        
         
