--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -3,7 +3,7 @@
         <div class="container-fluid">
             <div class="left">
                 <img src="images/train.png"/>
-                <a class="navbar-brand p-2 " href="#">Ticetac</a>
+                <a class="navbar-brand p-2 " href="#">Ticketac</a>
             </div>
             <div class="right">
                 <a class="navbar-brand" href="#">Connexion</a>
