--- a/views/page-error.ejs
+++ b/views/page-error.ejs
@@ -12,9 +12,27 @@
 </head>
 
 <body>
-  
-        <%- include('navbar'); %>
+<%- include('navbar'); %>
 
+<div class="container-fluid">
+
+    <div class="row align-items-center justify-content-center p-5">
+
+
+    
+        <div class="text-center justify-content-center" height="50vw">
+            <h2 class="text-white"> Oops ! No trains avalaible...</h2>
+            <button class="btn btn-danger" href="/recherche"> Home</button>
+        </div>
+
+
+    </div>
+
+
+  </div>
+
+
+        
      
        
         
