--- a/views/recherche.ejs
+++ b/views/recherche.ejs
@@ -12,30 +12,37 @@
 </head>
 
 <body>
-
-
   <%- include('navbar'); %>
-
-    <div class="container-fluid">
+    <div class="container-fluid ">
 
   
-        <form class="form row align-items-center justify-content-center">
-          <div class="col-12 col-lg-4">
-            <input type="text" class="form-control" placeholder="From">
-          </div>
-          <div class="col-12 col-lg-4">
-            <input type="text" class="form-control"  placeholder="To">
-          </div>
-          <div class="col-1">
-            <button type="submit" class="btn btn-danger">Go</button>
-          </div>
-        </form>
+
+
+
+
+
+     
+      
+    <div class="row align-items-center p-5 border border-primary text-center ">
+     
+      
+      <div class="row border border-primary  justify-content-center">
+        <div class="titleForm" >
+          <h4> One-Way Tickets: </h4>
+        </div>
+        <div class="col-2">
+          <input type="text" class="form-control" placeholder="From" aria-label="From">
+        </div>
+        <div class="col-2">
+          <input type="text" class="form-control" placeholder="To" aria-label="To">
+        </div>
+        <div class="col-2">
+          <submit type="sumbit" class="form-control btn btn-danger" >Go</submit>
+        </div>
       </div>
 
-
+    </div>
     </div>
 
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
