--- a/views/mytickets.ejs
+++ b/views/mytickets.ejs
@@ -21,7 +21,7 @@
 
 
       <div class="mytickets">
-        <h1>My last trips</h1>
+        <h1>My tickets :</h1>
        </div>
       <div class="row justify-content-center">
         <div class="col-6">
@@ -56,6 +56,13 @@
             <td>@twitter</td>
             <td>@mdo</td>
           </tr>
+          <tr class="table-danger">
+            <th scope="row">Total</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>218€</td>
+          </tr>
         </tbody>
       </table>
     </div>
@@ -63,7 +70,7 @@
 
     <div class="row offset-8" >
       <div>
-       <button class="btn btn-danger"> Home </button>
+       <button class="btn btn-danger"> Confirm </button>
       </div>
     </div>
 
