--- a/views/recherche.ejs
+++ b/views/recherche.ejs
@@ -12,34 +12,30 @@
 </head>
 
 <body>
+
+     <!-- NAVBAR START -->
   <%- include('navbar'); %>
+
+     <!-- SEARCH FORM START -->
     <div class="container-fluid ">
-
-  
-
-
-
-
-
-     
       
     <div class="row align-items-center p-5 border border-primary text-center ">
-     
-    
-      <div class="row border border-primary  justify-content-center">
+      <div class=" border-primary justify-content-center">
         <div class="titleForm" >
           <h4> One-Way Tickets: </h4>
         </div>
         <form action="/search" method="post"> 
-        <div class="col-2">
-          <input type="text" class="form-control" name="depart" placeholder="From" aria-label="From">
-        </div>
-        <div class="col-2">
-          <input type="text" class="form-control" name="arrivee" placeholder="To" aria-label="To">
-        </div>
-        <div class="col-2">
-          <submit type="sumbit" class="form-control btn btn-danger" >Go</submit>
-        </div>
+          <div class="row g-3 justify-content-center">
+            <div class="col-2">
+              <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+            </div>
+            <div class="col-2">
+              <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+            </div>
+            
+            <div class="col-2">
+              <button type="sumbit" class="btn btn-danger">Go</button>            </div>
+          </div>
       </form>
       </div>
 
