--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,10 +22,10 @@
               <h4 class="titleForm">Sign In</h4>
               <form action="/users/sign-in" method="POST">
                   <label>Email address</label>
-                  <input name="email" type="email" class="form-control" placeholder="Enter email">
+                  <input name="email" type="email" class="form-control mt-2" placeholder="Enter email">
                   <label>Password</label>
                   <input name="password" type="password" class="form-control" placeholder="Enter password">
-                <button type="submit" class="btn btn-danger">Submit</button>
+                <button type="submit" class="btn btn-danger mt-2">Submit</button>
               </form>
           </div>
 
