--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -3,10 +3,10 @@
         <div class="container-fluid">
             <div class="left">
                 <img src="images/train.png"/>
-                <a class="navbar-brand p-2 " href="#">Ticketac</a>
+                <a class="navbar-brand p-2 " href="/recherche">Ticketac</a>
             </div>
             <div class="right">
-                <a class="navbar-brand" href="users/sign-in">Connexion</a>
+                <a style="color:red" class="navbar-brand" href="/">Connexion</a>
                 <a class="navbar-brand" href="/lastTrips">My Last Trips</a>
             </div>
         </div>
