--- a/views/recherche.ejs
+++ b/views/recherche.ejs
@@ -20,7 +20,7 @@
         <div class="titleForm" >
           <h4> One-Way Tickets: </h4>
         </div>
-        <form action="/search" method="post"> 
+        <form action="/results" method="post"> 
           <div class="row g-4 justify-content-center">
             <div class="col-2">
               <input type="text" class="form-control" name="depart" placeholder="From" aria-label="From">
