--- a/views/recherche.ejs
+++ b/views/recherche.ejs
@@ -13,34 +13,30 @@
 
 <body>
   <%- include('navbar'); %>
-    <div class="container-fluid ">
+  <div class="container-fluid ">
  
-    <div class="row align-items-center p-5 border border-primary text-center ">
-      <div class=" border-primary justify-content-center">
-        <div class="titleForm" >
+    <div class="row align-items-center p-5 text-center ">
+        <div class="titleForm col-6" >
           <h4> One-Way Tickets: </h4>
         </div>
         <form action="/results" method="post"> 
           <div class="row g-4 justify-content-center">
-            <div class="col-2">
-              <input type="text" class="form-control" name="depart" placeholder="From" aria-label="From">
-            </div>
-            <div class="col-2">
-              <input type="text" class="form-control" name="arrivee" placeholder="To" aria-label="To">
-            </div>
-            <div class="col-2">
-              <input type="date" class="form-control" name="date">
-            </div>
-            
-            <div class="col-2">
-              <button type="sumbit" class="btn btn-danger">Go</button>           
-            </div>
+              <div class="col-2 ">
+                <input type="text" class="form-control" name="depart" placeholder="From" aria-label="From">
+              </div>
+              <div class="col-2">
+                <input type="text" class="form-control" name="arrivee" placeholder="To" aria-label="To">
+              </div>
+              <div class="col-2">
+                <input type="date" class="form-control" name="date">
+              </div>
+              <div class="col-2">
+                <button type="sumbit" class="btn btn-danger">Go</button>           
+              </div>
           </div>
-      </form>
-      </div>
-
+        </form>
     </div>
-    </div>
+  </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
