--- a/views/login.ejs
+++ b/views/login.ejs
@@ -41,7 +41,7 @@
               <input name="email" type="email" class="form-control" placeholder="Enter email">
               <label>Password</label>
               <input name="password" type="password" class="form-control" placeholder="Enter password">
-              <button type="submit" class="btn btn-danger">Submit</button>
+              <button type="submit" class="btn btn-danger mt-2">Submit</button>
             </form>
         </div>
         </div>
