--- a/views/mytickets.ejs
+++ b/views/mytickets.ejs
@@ -36,32 +36,26 @@
           </tr>
         </thead>
         <tbody>
+          <% var total=0
+            for(i=0;i<mytickets.length;i++) { %>
           <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-            <td>@mdo</td>
+            <th scope="row"><%=i+1%></th>
+            <td><%=mytickets[i].departure%> / <%=mytickets[i].arrival%></td>
+            <td><%=dateFormat(mytickets[i].date)%></td>
+            <td><%=mytickets[i].departureTime%></td>
+            <td><%=mytickets[i].price%>€</td>
           </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
-            <td>@mdo</td>
-          </tr>
+          <% 
+            total+=mytickets[i].price
+          }%>
+        
+
           <tr class="table-danger">
             <th scope="row">Total</th>
             <td></td>
             <td></td>
             <td></td>
-            <td>218€</td>
+            <td><%=total%>€</td>
           </tr>
         </tbody>
       </table>
