--- a/views/mytickets.ejs
+++ b/views/mytickets.ejs
@@ -64,7 +64,7 @@
 
     <div class="row offset-8" >
       <div>
-       <button class="btn btn-danger"> Confirm </button>
+       <a href="/recherche"> <a target="_blank" href="/lastTrips" ><button id="confirm" class="btn btn-danger"> Confirm </button></a> </a>
       </div>
     </div>
 
