--- a/views/lastTrips.ejs
+++ b/views/lastTrips.ejs
@@ -36,26 +36,15 @@
           </tr>
         </thead>
         <tbody>
+          <% for (var i=0; i< lasttrips.length; i++) { %> 
           <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-            <td>@mdo</td>
+            <th scope="row"> <%=i+1%></th>
+            <td><%=lasttrips[i].departure%> / <%=lasttrips[i].arrival%>  </td>
+            <td><%=dateFormat(lasttrips[i].date)%> </td>
+            <td><%=lasttrips[i].departureTime%></td>
+            <td><%=lasttrips[i].price%>€</td>
           </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
-            <td>@mdo</td>
-          </tr>
+          <% } %> 
         </tbody>
       </table>
     </div>
