--- a/views/mytickets.ejs
+++ b/views/mytickets.ejs
@@ -64,9 +64,34 @@
 
     <div class="row offset-8" >
       <div>
-       <a href="/recherche"> <a target="_blank" href="/lastTrips" ><button id="confirm" class="btn btn-danger"> Confirm </button></a> </a>
+
+        <!-- Button trigger modal -->
+
+  <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+   Confirm 
+</button>
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Confirm</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <h2> My Tickets : </h2>
+        <% for (var i = 0 ; i < mytickets.length; i++) { %> 
+          <p> <%=mytickets[i].departure%> / <%=mytickets[i].arrival%> le <%=dateFormat(mytickets[i].date)%> </p>
+        <%} %>
+      </div>
+      <div class="modal-footer">
+        <a href="/confirm"> <button type="button" class="btn btn-secondary">Close</button></a>
       </div>
     </div>
+  </div>
+</div>
 
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
