redirect page error + un peu de front

--- a/views/lastTrips.ejs
+++ b/views/lastTrips.ejs
@@ -8,7 +8,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Ticketac</title>
 </head>
 
 <body>
@@ -20,29 +20,32 @@
       <!-- Tableau last trip -->
 
 
-      <div class="mytickets">
-        <h1>My last trips</h1>
+      <div class="container-fluid">
+        <div class="row my-3 offset-2 mt-5">
+          <h2>My Last Trips:</h2>
+        </div>
+        
        </div>
       <div class="row justify-content-center">
-        <div class="col-6">
+        <div class="col-8">
         <table class="table table-borderless">
         <thead>
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">Journey</th>
-            <th scope="col">Date</th>
-            <th scope="col">Departure time</th>
-            <th scope="col">Price</th>
+            <th class="p-3" scope="col">#</th>
+            <th class="p-3" scope="col">Journey</th>
+            <th class="p-3" scope="col">Date</th>
+            <th class="p-3" scope="col">Departure time</th>
+            <th class="p-3" scope="col">Price</th>
           </tr>
         </thead>
         <tbody>
           <% for (var i=0; i< lasttrips.length; i++) { %> 
           <tr>
-            <th scope="row"> <%=i+1%></th>
-            <td><%=lasttrips[i].departure%> / <%=lasttrips[i].arrival%>  </td>
-            <td><%=dateFormat(lasttrips[i].date)%> </td>
-            <td><%=lasttrips[i].departureTime%></td>
-            <td><%=lasttrips[i].price%>€</td>
+            <th class="p-4 align-items-center" scope="row"> <%=i+1%></th>
+            <td class="p-4 align-items-center"><%=lasttrips[i].departure%> / <%=lasttrips[i].arrival%>  </td>
+            <td class="p-4 align-items-center"><%=dateFormat(lasttrips[i].date)%> </td>
+            <td class="p-4 align-items-center"><%=lasttrips[i].departureTime%></td>
+            <td class="p-4 align-items-center"><%=lasttrips[i].price%>€</td>
           </tr>
           <% } %> 
         </tbody>
@@ -50,9 +53,9 @@
     </div>
   </div>
 
-    <div class="row offset-8" >
+    <div class="row offset-9" >
       <div>
-       <button class="btn btn-danger"> Home </button>
+       <button class="btn btn-danger p-2 fs-5"> Home </button>
       </div>
     </div>
 
