--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,13 +1,13 @@
 <div class="col-12 p-0">
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-light bg-light p-4">
         <div class="container-fluid">
             <div class="left">
-                <img src="images/train.png"/>
+                <img height="40px" src="images/train.png"/>
                 <a class="navbar-brand p-2 " href="/recherche">Ticketac</a>
             </div>
             <div class="right">
-                <a style="color:red" class="navbar-brand" href="/">Connexion</a>
-                <a class="navbar-brand" href="/lastTrips">My Last Trips</a>
+                <a style="color:red" class="navbar-brand fs-6" href="/">Connexion</a>
+                <a class="navbar-brand fs-6" href="/lastTrips">My Last Trips</a>
             </div>
         </div>
     </nav>
