--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,13 +1,13 @@
 body{
-  font-family: 'Darker Grotesque', sans-serif;
+  font-family:Arial, Helvetica, sans-serif;
   height: 100vh;
   width: 100vw;
   border: 1px solid black;
 /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#7db9e8+0,2989d8+50,1e5799+100 */
 background: #7db9e8; /* Old browsers */
-background: -moz-linear-gradient(top,  #7db9e8 0%, #2989d8 50%, #1e5799 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  #7db9e8 0%,#2989d8 50%,#1e5799 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  #7db9e8 0%,#2989d8 50%,#1e5799 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+background: -moz-linear-gradient(top,  #7db9e8 36%, #2989d8 74%, #1e5799 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  #7db9e8 36%,#2989d8 74%,#1e5799 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  #7db9e8 36%,#2989d8 74%,#1e5799 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7db9e8', endColorstr='#1e5799',GradientType=0 ); /* IE6-9 */
 
 } 
@@ -38,8 +38,16 @@ height: 50vh;
 }
 
 .titleForm {
+  font-family: Arial, Helvetica, sans-serif;
   color: gainsboro; 
   font-size: 20px;
+}
+
+h2 {
+  font-family: Arial, Helvetica, sans-serif;
+  color: white; 
+  font-size: 15px;
+  opacity: 0.7 ;
 }
 
 .table {
@@ -51,4 +59,16 @@ height: 50vh;
   color: #FFFFFF;
 }
 
+#recherche {
+  
+background-image: url("/images/landmark.png");  
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#7db9e8+0,2989d8+50,1e5799+100 */
+background-image: url("/images/landmark.png"), #7db9e8; /* Old browsers */
+background-image: url("/images/landmark.png"), -moz-linear-gradient(top,  #7db9e8 36%, #2989d8 74%, #1e5799 100%); /* FF3.6-15 */
+background-image: url("/images/landmark.png"), -webkit-linear-gradient(top,  #7db9e8 36%,#2989d8 74%,#1e5799 100%); /* Chrome10-25,Safari5.1-6 */
+background-image: url("/images/landmark.png"), linear-gradient(to bottom,  #7db9e8 36%,#2989d8 74%,#1e5799 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7db9e8', endColorstr='#1e5799',GradientType=0 ); /* IE6-9 */
 
+background-repeat : no-repeat ;
+background-position: bottom;
+}
