--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,11 +21,9 @@
         <div class="col-12 col-sm-6 col-lg-2 text-center">
               <h4 class="titleForm">Sign In</h4>
               <form action="/users/sign-in" method="POST">
-                  <label>Email address</label>
-                  <input name="email" type="email" class="form-control mt-2" placeholder="Enter email">
-                  <label>Password</label>
-                  <input name="password" type="password" class="form-control" placeholder="Enter password">
-                <button type="submit" class="btn btn-danger mt-2">Submit</button>
+                  <input name="email" type="email" class="form-control mt-2 my-3" placeholder="Email">
+                  <input name="password" type="password" class="form-control my-3" placeholder="Password">
+                <button type="submit" class="btn btn-danger mt-2 my-3">Submit</button>
               </form>
           </div>
 
@@ -33,15 +31,11 @@
           <div class="col-12 col-sm-6 col-lg-2 text-center">
             <h4 class="titleForm">Sign Up</h4>
             <form action="/users/sign-up" method="POST">
-              <label>Name</label>
-              <input name="name" type="text" class="form-control" placeholder="Name">
-              <label>FirstName</label>
-              <input name="firstname" type="text" class="form-control" placeholder="FirstName">
-              <label>Email address</label>
-              <input name="email" type="email" class="form-control" placeholder="Enter email">
-              <label>Password</label>
-              <input name="password" type="password" class="form-control" placeholder="Enter password">
-              <button type="submit" class="btn btn-danger mt-2">Submit</button>
+              <input name="name" type="text" class="form-control my-3" placeholder="Name">
+              <input name="firstname" type="text" class="form-control my-3" placeholder="FirstName">
+              <input name="email" type="email" class="form-control my-3" placeholder="Enter email">
+              <input name="password" type="password" class="form-control my-3" placeholder="Enter password">
+              <button type="submit" class="btn btn-danger mt-2 my-3">Submit</button>
             </form>
         </div>
         </div>
