--- a/views/resultats.ejs
+++ b/views/resultats.ejs
@@ -8,43 +8,55 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Ticketac</title>
 </head>
 
 <body>
-<%- include('navbar'); %>
+    <%- include('navbar'); %>
 
-<div class="container-fluid">
-    
-    <div class="row  ">
+        <div class="container-fluid">
 
-        <h2 class="text-center"> Tickets availables on <%= date %>   : </h2>
-
-        <ul class="list-group  align-items-center">
-
-            <% for (i=0; i<journeys.length; i++) {  %> 
+            <div class="row ">
                 
-              <li class="col-8 list-group-item d-flex justify-content-between align-items-center p-3 m-2"> 
-                 <div> <p> <%=journeys[i].departure%> /<%=journeys[i].arrival%></p> </div>
-                 <p> train departure at <%=journeys[i].departureTime%></p>
-                 <div> 
-                     
-                  <span><%=journeys[i].price%>€</span>
-                  <a href="/mytickets?journeyid=<%=journeys[i]._id%>" >
-                    <button type="button" class="btn btn-danger">Ok</button>
-                 </a>  
-                 </div>
-              </li>
-<%} %> 
-        </ul>
-    </div>
+                <h2 class=" my-3 offset-2 mt-5"> Tickets availables on <%= dateFormat(date) %> : </h2>
+            
 
-</div>
-     
-       
-        
-       
-         
+                <ul class="list-group  align-items-center">
 
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+                    <% for (i=0; i<journeys.length; i++) { %>
+
+                        <li class="col-8 list-group-item d-flex rounded justify-content-between  p-4 m-2">
+                            <div class="fs-5 align-items-center">
+                                <p>
+                                    <%=journeys[i].departure%> /<%=journeys[i].arrival%>
+                                </p>
+                            </div>
+
+                            <div class="fs-6 text-secondary align-items-center ">
+                                <p> train departure at <%=journeys[i].departureTime%></p>
+                            </div>
+
+                            <div class=" fs-5 align-items-center">
+                                <span>
+                                    <%=journeys[i].price%>€
+                                </span>
+                                <a href="/mytickets?journeyid=<%=journeys[i]._id%>">
+                                    <button type="button" class="btn btn-danger">Ok</button>
+                                </a>
+                            </div>
+                        </li>
+                        <%} %>
+                </ul>
+            </div>
+
+        </div>
+
+
+
+
+
+
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
 </body>
