--- a/views/page-error.ejs
+++ b/views/page-error.ejs
@@ -20,7 +20,7 @@
 
         <div class="text-center justify-content-center" height="50vw">
             <h2 class="text-white"> Oops ! No trains avalaible...</h2>
-            <button class="btn btn-danger" href="/recherche"> Home</button>
+           <a href="/recherche"><button class="btn btn-danger"> Home</button> </a>
         </div>
 
 
