--- a/views/lastTrips.ejs
+++ b/views/lastTrips.ejs
@@ -55,7 +55,7 @@
 
     <div class="row offset-9" >
       <div>
-       <button class="btn btn-danger p-2 fs-5"> Home </button>
+       <a href="/recherche"> <button class="btn btn-danger p-2 fs-5"> Home </button></a>
       </div>
     </div>
 
