--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -61,7 +61,7 @@ h2 {
 
 #recherche {
   
-background-image: url("/images/landmark.png");  
+ 
   /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#7db9e8+0,2989d8+50,1e5799+100 */
 background-image: url("/images/landmark.png"), #7db9e8; /* Old browsers */
 background-image: url("/images/landmark.png"), -moz-linear-gradient(top,  #7db9e8 36%, #2989d8 74%, #1e5799 100%); /* FF3.6-15 */
@@ -69,6 +69,7 @@ background-image: url("/images/landmark.png"), -webkit-linear-gradient(top,  #7d
 background-image: url("/images/landmark.png"), linear-gradient(to bottom,  #7db9e8 36%,#2989d8 74%,#1e5799 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7db9e8', endColorstr='#1e5799',GradientType=0 ); /* IE6-9 */
 
-background-repeat : no-repeat ;
-background-position: bottom;
+background-repeat : no-repeat; 
+background-position: center, center;
+background-size: 15%, 100%
 }
