--- a/views/recherche.ejs
+++ b/views/recherche.ejs
@@ -21,16 +21,16 @@
         </div>
         <form action="/results" method="post"> 
           <div class="row  justify-content-center">
-              <div class="col-2 ">
+              <div class="col-8 col-lg-2 m-3">
                 <input type="text" class="form-control" name="depart" placeholder="From" aria-label="From">
               </div>
-              <div class="col-2">
+              <div class="col-8 col-lg-2 m-3">
                 <input type="text" class="form-control" name="arrivee" placeholder="To" aria-label="To">
               </div>
-              <div class="col-2">
+              <div class="col-8 col-lg-2 m-3">
                 <input type="date" class="form-control" name="date">
               </div>
-              <div class="col-2 ">
+              <div class="col-8 col-lg-2 m-3 ">
                 <button type="sumbit" class="btn btn-danger">Go</button>           
               </div>
           </div>
