--- a/views/mytickets.ejs
+++ b/views/mytickets.ejs
@@ -25,7 +25,7 @@
           <h2>My Tickets:</h2>
         </div>
       <div class="row justify-content-center">
-        <div class="col-8">
+        <div class="col-12 col-md-8">
         <table class="table table-borderless">
         <thead>
           <tr>
